Better prefixes for CMB2 settings page

--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,56 @@
-.cmb-td {
+.etsy_options .cmb-td {
 	width: 80%;
 }
-.form-table th {
-	padding-left: 15px;
-}
 
-.form-table td .import-count {
+.etsy_options .import-count {
 	margin-top: 35px;
 }
 
-.form-table td #api-key {
+.etsy_options #api-key {
 	max-width: 215px;
 	min-width: 215px;
 }
 
-.form-table td #store-id {
+.etsy_options #store-id {
 	max-width: 80px;
 	min-width: 80px;
 }
 
-.form-table td .checkbox {
+.etsy_options .checkbox {
 	float: left;
 }
 
-.form-table td label {
+.etsy_options label {
 	display: block;
-	margin-left: 30px;
 }
 
-#options-form .button-primary {
+.etsy_options .button-primary {
 	width: 125px;
 }
 
-#options-form .button-primary:active {
+.etsy_options .button-primary:active {
 	padding-top: 0;
 	vertical-align: baseline;
 }
 
-#options-form .submit {
+.etsy_options .submit {
 	margin-bottom: 10px;
 	padding: 10px 15px 0;
 }
 
-#options-form .save-notes {
+.etsy_options .save-notes {
 	margin: 0 0 10px;
 	overflow: hidden;
 	padding: 0 0 0 15px;
 }
 
-#options-form .button-import {
+.etsy_options .button-import {
 	background: #34B928;
 	border-color: #2C9B22;
 	float: left;
 }
 
-#options-form .button-import:active,
-#options-form .button-import:hover {
+.etsy_options .button-import:active,
+.etsy_options .button-import:hover {
 	background: #2C9B22;
 }
